discussion/kv_engine/182767/182767_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54516: Fix VBucketManifestTest.duplicate_cid_different_scope

The test passes but not for the reason it is expecting. The test
tries to add the same collection but in two different scopes. This
update function returns a failure not because of the duplicate but
because no checkpoint events are created. The fix now ensures a
manifest with duplicate collections is used and triggers a validation
failure.

Change-Id: I81c30825a525d38507284ebeb950b0244fae7126

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-15 10:22:35.000000000
Message: 
Uploaded patch set 2: New patch set was added with same tree, parent, and commit message as Patch Set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-15 10:22:49.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/324782/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-15 10:25:31.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/470/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/470/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/456/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/456/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/479/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/479/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/469/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/469/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/702/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/702/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/459/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/459/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/479/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/479/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/460/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:673:22: error: no member named "cm" in "CollectionsManifest" [clang-diagnostic-error]
                    .cm.add(CollectionEntry::dairy, ScopeEntry::shop1)));
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:1986:52: note: expanded from macro "EXPECT_FALSE"
#define EXPECT_FALSE(condition) GTEST_EXPECT_FALSE(condition)
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:1969:25: note: expanded from macro "GTEST_EXPECT_FALSE"
  GTEST_TEST_BOOLEAN_(!(condition), #condition, true, false, \
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/internal/gtest-internal.h:1502:34: note: expanded from macro "GTEST_TEST_BOOLEAN_"
      ::testing::AssertionResult(expression)) \
                                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/460/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:673:22:
error: no member named "cm" in "CollectionsManifest" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/460/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21176/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
